native-resources/nginx-ingress-controller/with-tls-ssl/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <domain-name>
      secretName: hello-app-tls
  rules:
    - host: <domain-name>
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: hello-service
                port:
                  number: 80
